(chore): Avoid jump when adding the first hashtag in composer

--- a/src/app/modules/composer/components/popup/tags/tags.component.scss
+++ b/src/app/modules/composer/components/popup/tags/tags.component.scss
@@ -89,6 +89,7 @@
     list-style: none;
     margin: 0 0 32px; // <li> have extra 20 bottom margin
     padding: 0;
+    min-height: 56px; // 1 line, to avoid jumps
 
     .m-composerTags__item {
       display: inline-flex;
